<resources>
    <string name="app_name">SlingCafe</string>
    <string name="action_settings">Settings</string>


    <string name="title_main">Sling Cafe</string>
    <string name="Admin">Admin</string>
    <string name="empIdTv">Employee ID</string>
    <string name="new_user">Are you a new user?</string>

    <string name="empNameTv">Name</string>
    <string name="empNameEt">Your Name</string>
    <string name="empIdEt">Employee ID</string>
    <string name="empEmailTv">Email</string>
    <string name="empEmailEt">Enter Email</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">BreakFast</string>
    <string name="title_activity_new_user_db">NewUserDb</string>

    <string name="adminLogin">Login</string>
    <string name="password">Password:</string>
    <string name="employeeList">Employee List</string>
    <string name="enter_password">Enter Password</string>
    <string name="employee_list">Employee List</string>
    <string name="set">Set</string>
    <string name="breakfast_price">Breakfast Price:</string>
    <string name="lunch_price">Lunch Price:</string>
    <string name="people">People</string>
    <string name="money">Money</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="id">Id</string>

    <string name="enter_amount_received">Enter Amount Received</string>
    <string name="generate_receipt">Generate Receipt</string>

    <string-array name="balance_sort">
        <item>Overall</item>
        <item>Till Previous Month</item>

    </string-array>

</resources>
