<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/landscape_resource_main"
   >



<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Admin"
    android:id="@+id/adminButton"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:onClick="adminLogin"
    android:elevation="5dp"
    android:background="@color/colorPrimary" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/empIdTv"
    android:id="@+id/textView2"
    android:textStyle="bold"
    android:textSize="30sp"
    android:layout_alignBottom="@+id/adminButton"
    android:layout_centerHorizontal="true"
    android:elevation="5dp"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:ems="10"
    android:id="@+id/empId"
    android:layout_below="@+id/textView2"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="42dp"
   />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:id="@+id/empIdGotButton"
    android:onClick="onEmpIdReceive"
    android:layout_below="@+id/empId"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="67dp"
    android:elevation="5dp"
    android:background="@color/colorPrimary" />


</RelativeLayout>
